Actual end to end throughput in Eclipse, not erroring